syntax = "proto3";

package domain;
option go_package = "domain/proto";

message RegisterInput {
    string email = 1;
    string password = 2;
}

message User {
    uint64 id = 1;
    string email = 2;
    string first_name = 4;
    string last_name = 5;
}

service UserRegister {
    rpc Register(RegisterInput) returns (User) {}
}